ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-ingress
spec:
  rules:
  - host: devd-test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rails-app
            port:
              number: 3000
